# parallel-lab2

./: .gitignore  CMakeLists.txt
src/: main.cpp  task_manager.cpp  task_manager.h
src/pool/: thread_pool.cpp  thread_pool.h
src/utils/: concurrent_queue.h  helper.h
